--- a/src/features/components/ExperienceTimeline/ExperienceTimeline.scss
+++ b/src/features/components/ExperienceTimeline/ExperienceTimeline.scss
@@ -19,6 +19,7 @@
 
             .company-info {
                 padding: 0 10px 0 20px;
+                // line-height: 10px;
                 .company-name{
                     font-size: larger;
                     font-weight: 700;
@@ -36,6 +37,10 @@
         }
 
         &-projects {
+            margin-left: -12px;
+            line-height: 10px;
+            width: 90%;
+            text-align:left;
             .project-experience {
                 position: relative;
                 width: 100%;
@@ -47,7 +52,7 @@
                 margin-bottom: 10px;
                 margin-right: 5px;
                 // margin-bottom: -10px;
-            
+
                 &-marker {
                     position: absolute;
                     width: 15px;
@@ -83,7 +88,7 @@
                 }
                 &-content {
                     align-items: center;
-                    
+
                     line-height: 15px;
                     font-size: 15px;
 
@@ -101,5 +106,5 @@
                 }
             }
         }
-    }  
+    }
 }
