update | refactor Wrapper components

--- a/src/features/PortfolioHeader/PortfolioContact/PortfolioContact.scss
+++ b/src/features/PortfolioHeader/PortfolioContact/PortfolioContact.scss
@@ -19,6 +19,8 @@
     align-items: center;
     color: green;
 
+    z-index: 2;
+
     &-getcv {
         padding: 5px;
         position: relative;
