--- a/src/features/components/CV/CV.scss
+++ b/src/features/components/CV/CV.scss
@@ -4,66 +4,29 @@
     height: 1754px;
     background-color: white;
 
-    display: flex;
+    display: grid;
+    grid-template-columns: 60% 10% 30%;
+    grid-template-rows: 155px auto;
 
-    .cv__body {
-        position: relative;;
-        width: 67%;
-        height: 100%;
-        background-color: antiquewhite;
-        padding: 10px 0 10px 10px;
-        
-        display: flex;
-        flex-direction: column;
-
-        &--profile {
-
-            &--title {
-                display: flex;
-                align-items: center;
-            }
-
-            &--content {
-                text-align: left;
-            }
+    .cv {
+        &__header {
+            grid-area: 1 / 1 / 1 / 3;
+            background-color: red;
         }
 
-        &--project {
-            &--title {
-                
-            }
-
-            &--content {
-                text-align: left;
-            }
-        }
-    }
-
-    .cv__side {
-        position: relative;
-        width: 33%;
-        height: 100%;
-        background-color: beige;
-        padding: 10px 0 10px 10px;
-
-        &--name {
-
+        &__contact {
+            grid-area: 1 / 3 / 1 / 3;
+            background-color: blue;
         }
 
-        &--contact {
-
+        &__experience {
+            grid-area: 2 / 1 / 2 / 1;
+            background-color: green;
         }
 
-        &--certificate {
-
-        }
-
-        &--skill {
-
-        }
-
-        &--interests {
-
+        &__personal-overview {
+            grid-area: 2 / 2 / 2 / 4;
+            background-color: white;
         }
     }
 }
