feat | update cv

--- a/src/features/components/CV/HeaderCv/HeaderCv.scss
+++ b/src/features/components/CV/HeaderCv/HeaderCv.scss
@@ -26,7 +26,7 @@
         display: flex;
         flex-direction: column;
         justify-content: end;
-        background-color: yellow;
+        // background-color: yellow;
         float: right;
         & > * {
             display: flex;
