--- a/src/features/components/CV/CV.scss
+++ b/src/features/components/CV/CV.scss
@@ -11,17 +11,17 @@
     .cv {
         &__header {
             grid-area: 1 / 1 / 1 / 3;
-            background-color: red;
+            background-color: white;
         }
 
         &__contact {
             grid-area: 1 / 3 / 1 / 3;
-            background-color: blue;
+            background-color: white;
         }
 
         &__experience {
             grid-area: 2 / 1 / 2 / 1;
-            background-color: green;
+            background-color: white;
         }
 
         &__personal-overview {
@@ -34,4 +34,8 @@
 .download-cv {
     position: absolute !important;
     z-index: 1;
+}
+
+p {
+    font-size: larger;
 }
