--- a/src/features/components/CV/components/LabelLineDecor/LabelLineDecor.scss
+++ b/src/features/components/CV/components/LabelLineDecor/LabelLineDecor.scss
@@ -4,10 +4,10 @@
     margin: 9px;
 
     .label-line-decor__title {
-        margin-left: 9px;
+        text-transform: uppercase;
         font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        font-size: 21px;
         letter-spacing: 3px;
+        margin-bottom: 5px;
     }
 
     .label-line-decor__line {
