--- a/src/features/components/CV/CV.scss
+++ b/src/features/components/CV/CV.scss
@@ -17,6 +17,9 @@
         &__contact {
             grid-area: 1 / 3 / 1 / 3;
             background-color: white;
+            display: flex;
+            flex-direction: column;
+            justify-content: end;
         }
 
         &__experience {
