update | leave message button update status

--- a/src/pages/Portfolio/features/PortfolioHeader/PortfolioContact/PortfolioContact.scss
+++ b/src/pages/Portfolio/features/PortfolioHeader/PortfolioContact/PortfolioContact.scss
@@ -51,6 +51,7 @@
                 padding: 0;
                 margin: 0;
                 outline: none;
+                color: red !important;
             }
 
             & > input, button {
