--- a/src/pages/Portfolio/features/PortfolioContent/AppCenter/AppCenter.scss
+++ b/src/pages/Portfolio/features/PortfolioContent/AppCenter/AppCenter.scss
@@ -49,4 +49,12 @@
             grid-area: 3 / 1 / 3 / 1;
         }
     }
+
+    .app_center-explore_more {
+        margin: auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
   }
