--- a/src/pages/Portfolio/features/components/ExploreMore/ExploreMore.scss
+++ b/src/pages/Portfolio/features/components/ExploreMore/ExploreMore.scss
@@ -1,4 +1,5 @@
 .explore-more {
+    position: relative;
     color: green;
     display: flex;
     justify-content: center;
@@ -7,7 +8,7 @@
 }
 
 .weekly-progress {
-    position: absolute;
+    position: relative;
     color: green;
     display: flex;
     flex-direction: column;
